--- a/kooplexhub/hub/templates/bio.html
+++ b/kooplexhub/hub/templates/bio.html
@@ -1,8 +1,8 @@
-<div class="modal fade" id="update-bio" tabindex="-1" role="dialog" aria-labelledby="modalAbout" aria-hidden="true">
+<div class="modal fade" id="update-bio" tabindex="-1" role="dialog" aria-labelledby="titleBiography" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="longTitleBio">Update your profile</h5>
+        <h5 class="modal-title" id="titleBiography">Update your profile</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
