--- a/kooplexhub/hub/templates/bio.html
+++ b/kooplexhub/hub/templates/bio.html
@@ -7,7 +7,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <form id="profile" class="form-horizontal" action="{% url 'user:updateprofile' %}" method="post">
+      <form id="profile" class="form-horizontal" action="{% url 'user:updateprofile' next_page %}" method="post">
       {% csrf_token %}
         <div class="modal-body">
           <table>
